@@ -194,6 +194,17 @@ install-service-ipx: create-service-dir
 install-service-pppoe: create-service-dir
 	install -m ${MODE} cblfs/sysconfig/network-devices/services/pppoe    ${EXTDIR}/sysconfig/network-devices/services
 
+install-netboot:
+	install -d -m ${DIRMODE} ${EXTDIR}/rc.d
+	install -m ${MODE} netboot/rc0.d       ${EXTDIR}/rc.d/
+	install -m ${MODE} netboot/rc1.d       ${EXTDIR}/rc.d/
+	install -m ${MODE} netboot/rcsysinit.d ${EXTDIR}/rc.d/
+	ln -sf ../rc.d/rc0.d ${EXTDIR}/rc.d/rc6.d
+	ln -sf ../rc.d/rc1.d ${EXTDIR}/rc.d/rc2.d
+	ln -sf ../rc.d/rc1.d ${EXTDIR}/rc.d/rc3.d
+	ln -sf ../rc.d/rc1.d ${EXTDIR}/rc.d/rc4.d
+	ln -sf ../rc.d/rc1.d ${EXTDIR}/rc.d/rc5.d
+
 install-alsa: create-dirs
 	install -m ${MODE} cblfs/init.d/alsa       ${EXTDIR}/rc.d/init.d/
 	ln -sf  ../init.d/alsa ${EXTDIR}/rc.d/rc0.d/K35alsa
