@@ -11,6 +11,8 @@
 . /etc/sysconfig/rc
 . $rc_functions
 
+pidfile=/var/run/gpm.pid
+
 if [ -f /etc/sysconfig/mouse ]
 	then
 	. /etc/sysconfig/mouse
@@ -26,12 +28,12 @@ fi
 case "$1" in
 	start)
 		boot_mesg "Starting gpm..."
-		loadproc /usr/sbin/gpm -m $MDEVICE -t $PROTOCOL $GPMOPTS
+		loadproc -p $pidfile /usr/sbin/gpm -m $MDEVICE -t $PROTOCOL $GPMOPTS
 		;;
 
 	stop)
 		boot_mesg "Stopping gpm..."
-		killproc /usr/sbin/gpm
+		killproc -p $pidfile /usr/sbin/gpm
 		;;
 
 	restart)
@@ -41,7 +43,7 @@ case "$1" in
 		;;
 
 	status)
-		statusproc /usr/sbin/gpm
+		statusproc -p $pidfile /usr/sbin/gpm
 		;;
 
 	*)
