@@ -7,16 +7,18 @@
 . /etc/sysconfig/rc
 . $rc_functions
 
+pidfile=/var/run/ntpd.pid
+
 case "$1" in
 	start)
 		boot_mesg "Starting ntpd..."
 		ntpd -gqx
-		loadproc /usr/sbin/ntpd
+		loadproc -p $pidfile /usr/sbin/ntpd
 		;;
 
 	stop)
 		boot_mesg "Stopping ntpd..."
-		killproc /usr/sbin/ntpd
+		killproc -p $pidfile /usr/sbin/ntpd
 		;;
 
 	restart)
@@ -26,7 +28,7 @@ case "$1" in
 		;;
 
 	status)
-		statusproc /usr/sbin/ntpd
+		statusproc -p $pidfile /usr/sbin/ntpd
 		;;
 
 	*)
