@@ -1,3 +1,6 @@
+jim - October 24, 2007
+	* Merged Netboot Scripts
+
 jim - October 23, 2007
 	* Merged BLFS changes from SVN
 	* Merged LFS changes from SVN
